# conways_game_of_life

./: CMakeLists.txt  README.md
src/: digit_count.h  engine.h  image_start.cpp  main.cpp  map_engine.h  write_gif.h
src/lodepng/: CMakeLists.txt
src/projects/static/: CMakeLists.txt  main.cpp
